--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vant": "^2.5.5",
     "vue": "^2.5.2",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
