区外推多多

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pushmore",
+  "name": "qw_pushmore",
   "version": "1.0.0",
   "description": "",
   "author": "a-zcf <1312423338@qq.com>",
