--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-import": "^1.13.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "mescroll.js": "^1.4.2",
     "qs": "^6.9.1",
     "vant": "^2.5.5",
     "vue": "^2.5.2",
